...
      method: 'GET'
    })
    .then((response) => response.json())
    .then((responseJson) => {
      console.log("GET response: " + responseJson);
      if((responseJson || []).length === 0){
        this.setState({searchResult : ['Not Found']});
      }else{

        var nameArr = [];
        var healthArr = [];
        var i;
        for(i = 0; i < responseJson.length; i++){
...
        dotColor: '#ACD7CA',
        selectedDayTextColor: 'white',
        monthTextColor: '#ACD7CA',
        arrowColor: '#ACD7CA',
      }}
    />
      <Icon.Button testID = 'add_tmp'
          name="account-plus"
          backgroundColor="#ACD7CA"
          onPress={() => {
            navigation.navigate('Add Temporary Connection',{
              date: this.state.date,
            })
...
