...
    

        <Text style={styles.text}>First: {this.state.firstList.length}</Text>
        <Text style={styles.text}>Second: {this.state.secondList.length}</Text>
        <Text style={styles.text}>Third: {this.state.thirdList.length}</Text>
      <View style={styles.add_button}>
        <Icon.Button testID = 'add'
          name="account-plus"
          backgroundColor="#ACD7CA"
          onPress={() => {
            navigation.navigate('AddConnection')
          }}
        >
...
